// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReclaimPaymentConfirmationScreen renders correctly 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "paddingVertical": 10,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Jost-Book",
                  "fontSize": 26,
                  "lineHeight": 32,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#2E3338",
                  "padding": 10,
                  "paddingBottom": 10,
                },
              ]
            }
          >
            reclaimPayment
          </Text>
        </View>
        <View
          style={
            Object {
              "marginHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 16,
                        },
                        Object {
                          "fontSize": 20,
                        },
                      ]
                    }
                  >
                    M
                  </Text>
                </View>
              </View>
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-SemiBold",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                    Object {
                      "marginHorizontal": 20,
                      "paddingTop": 6,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                mobileNumber
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "marginRight": 4,
                      },
                    ]
                  }
                >
                  🇺🇸
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "color": "#9CA4A9",
                      },
                    ]
                  }
                >
                  +1 (415) 555-0000
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "center",
                    "flexDirection": "row",
                    "marginTop": 5,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 34,
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 24,
                    },
                  ]
                }
              >
                $
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                      "paddingHorizontal": 3,
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 48,
                      "lineHeight": 64,
                    },
                  ]
                }
              >
                13.30
              </Text>
            </View>
            <View
              style={
                Object {
                  "borderStyle": "solid",
                  "borderTopColor": "#EEEEEE",
                  "borderTopWidth": 1,
                  "marginBottom": 15,
                  "marginTop": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  global:amount
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  13.30
                </Text>
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  securityFee
                </Text>
                <View
                  accessible={true}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 10,
                      "left": 10,
                      "right": 10,
                      "top": 10,
                    }
                  }
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "justifyContent": "flex-end",
                      "paddingHorizontal": 5,
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../packages/mobile/src/images/info.png",
                      }
                    }
                    style={
                      Object {
                        "height": 12,
                        "tintColor": "#BDBDBD",
                        "width": 12,
                      }
                    }
                  />
                </View>
                <Modal
                  animationType="none"
                  hardwareAccelerated={false}
                  hideModalContentWhileAnimating={false}
                  onModalHide={[Function]}
                  onModalWillHide={[Function]}
                  onModalWillShow={[Function]}
                  onRequestClose={[Function]}
                  scrollHorizontal={false}
                  scrollOffset={0}
                  scrollOffsetMax={0}
                  scrollTo={null}
                  statusBarTranslucent={true}
                  supportedOrientations={
                    Array [
                      "portrait",
                      "landscape",
                    ]
                  }
                  swipeThreshold={100}
                  transparent={true}
                  visible={false}
                >
                  <View
                    accessible={true}
                    focusable={true}
                    forwardedRef={[Function]}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "backgroundColor": "black",
                        "bottom": 0,
                        "height": 1334,
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "width": 750,
                      }
                    }
                  />
                  <View
                    forwardedRef={[Function]}
                    hideModalContentWhileAnimating={false}
                    onModalHide={[Function]}
                    onModalWillHide={[Function]}
                    onModalWillShow={[Function]}
                    pointerEvents="box-none"
                    scrollHorizontal={false}
                    scrollOffset={0}
                    scrollOffsetMax={0}
                    scrollTo={null}
                    statusBarTranslucent={true}
                    style={
                      Object {
                        "flex": 1,
                        "justifyContent": "center",
                        "margin": 37.5,
                        "transform": Array [
                          Object {
                            "translateY": 0,
                          },
                        ],
                      }
                    }
                    supportedOrientations={
                      Array [
                        "portrait",
                        "landscape",
                      ]
                    }
                    swipeThreshold={100}
                  >
                    <RNCSafeAreaView>
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "padding": 16,
                            },
                            Object {
                              "borderRadius": 8,
                            },
                            Object {
                              "elevation": 12,
                              "shadowColor": "rgba(156, 164, 169, 0.4)",
                              "shadowOffset": Object {
                                "height": 2,
                                "width": 0,
                              },
                              "shadowOpacity": 1,
                              "shadowRadius": 12,
                            },
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "maxHeight": "100%",
                                "padding": 24,
                              },
                              undefined,
                            ],
                          ]
                        }
                      >
                        <RCTScrollView
                          contentContainerStyle={
                            Object {
                              "alignItems": "center",
                            }
                          }
                        >
                          <View>
                            <Text
                              style={
                                Object {
                                  "color": "#2E3338",
                                  "fontFamily": "Jost-Medium",
                                  "fontSize": 22,
                                  "lineHeight": 28,
                                  "marginBottom": 12,
                                  "textAlign": "center",
                                }
                              }
                            >
                              securityFee
                            </Text>
                            <Text
                              style={
                                Object {
                                  "color": "#2E3338",
                                  "fontFamily": "Inter-Regular",
                                  "fontSize": 16,
                                  "lineHeight": 22,
                                  "marginBottom": 24,
                                  "textAlign": "center",
                                }
                              }
                            >
                              feeEducation
                            </Text>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "flexWrap": "wrap",
                              "justifyContent": "space-around",
                              "maxWidth": "100%",
                            }
                          }
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            nativeBackgroundAndroid={
                              Object {
                                "attribute": "selectableItemBackgroundBorderless",
                                "type": "ThemeAttrAndroid",
                              }
                            }
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#1AB775",
                                    "fontFamily": "Inter-SemiBold",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "paddingTop": 16,
                                  },
                                ]
                              }
                            >
                              global:dismiss
                            </Text>
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </Modal>
              </View>
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 0.7,
                      },
                    ],
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="#42D689"
                  hidesWhenStopped={true}
                  size="small"
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "borderStyle": "solid",
                  "borderTopColor": "#EEEEEE",
                  "borderTopWidth": 1,
                  "marginBottom": 15,
                  "marginTop": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  totalRefunded
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  13.30
                </Text>
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  Object {
                    "marginVertical": 0,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#81868B",
                      },
                    ]
                  }
                >
                  Celo Dollars (@
                   
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        undefined,
                        Object {
                          "color": undefined,
                        },
                      ]
                    }
                  >
                    
                    $
                    0.75
                  </Text>
                  )
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  10.00
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "marginHorizontal": 16,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "column",
            },
            Object {
              "marginBottom": 16,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={false}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#97DFC1",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "opacity": undefined,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              }
            }
            testID="ConfirmButton"
          >
            <Text
              accessibilityLabel="global:confirm"
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              global:confirm
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "column",
            },
            Object {
              "marginBottom": 10,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#F1F0EB",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "opacity": undefined,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              }
            }
          >
            <Text
              accessibilityLabel="cancel"
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
          },
          Object {
            "height": 0,
          },
          undefined,
        ]
      }
    />
  </View>
</RNCSafeAreaView>
`;

exports[`ReclaimPaymentConfirmationScreen renders correctly when fee calculation fails 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "paddingVertical": 10,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Jost-Book",
                  "fontSize": 26,
                  "lineHeight": 32,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#2E3338",
                  "padding": 10,
                  "paddingBottom": 10,
                },
              ]
            }
          >
            reclaimPayment
          </Text>
        </View>
        <View
          style={
            Object {
              "marginHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 16,
                        },
                        Object {
                          "fontSize": 20,
                        },
                      ]
                    }
                  >
                    M
                  </Text>
                </View>
              </View>
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-SemiBold",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                    Object {
                      "marginHorizontal": 20,
                      "paddingTop": 6,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                mobileNumber
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "marginRight": 4,
                      },
                    ]
                  }
                >
                  🇺🇸
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "color": "#9CA4A9",
                      },
                    ]
                  }
                >
                  +1 (415) 555-0000
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "center",
                    "flexDirection": "row",
                    "marginTop": 5,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 34,
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 24,
                    },
                  ]
                }
              >
                $
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                      "paddingHorizontal": 3,
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 48,
                      "lineHeight": 64,
                    },
                  ]
                }
              >
                13.30
              </Text>
            </View>
            <View
              style={
                Object {
                  "borderStyle": "solid",
                  "borderTopColor": "#EEEEEE",
                  "borderTopWidth": 1,
                  "marginBottom": 15,
                  "marginTop": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  global:amount
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  13.30
                </Text>
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  securityFee
                </Text>
                <View
                  accessible={true}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 10,
                      "left": 10,
                      "right": 10,
                      "top": 10,
                    }
                  }
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "justifyContent": "flex-end",
                      "paddingHorizontal": 5,
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../packages/mobile/src/images/info.png",
                      }
                    }
                    style={
                      Object {
                        "height": 12,
                        "tintColor": "#BDBDBD",
                        "width": 12,
                      }
                    }
                  />
                </View>
                <Modal
                  animationType="none"
                  hardwareAccelerated={false}
                  hideModalContentWhileAnimating={false}
                  onModalHide={[Function]}
                  onModalWillHide={[Function]}
                  onModalWillShow={[Function]}
                  onRequestClose={[Function]}
                  scrollHorizontal={false}
                  scrollOffset={0}
                  scrollOffsetMax={0}
                  scrollTo={null}
                  statusBarTranslucent={true}
                  supportedOrientations={
                    Array [
                      "portrait",
                      "landscape",
                    ]
                  }
                  swipeThreshold={100}
                  transparent={true}
                  visible={false}
                >
                  <View
                    accessible={true}
                    focusable={true}
                    forwardedRef={[Function]}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "backgroundColor": "black",
                        "bottom": 0,
                        "height": 1334,
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "width": 750,
                      }
                    }
                  />
                  <View
                    forwardedRef={[Function]}
                    hideModalContentWhileAnimating={false}
                    onModalHide={[Function]}
                    onModalWillHide={[Function]}
                    onModalWillShow={[Function]}
                    pointerEvents="box-none"
                    scrollHorizontal={false}
                    scrollOffset={0}
                    scrollOffsetMax={0}
                    scrollTo={null}
                    statusBarTranslucent={true}
                    style={
                      Object {
                        "flex": 1,
                        "justifyContent": "center",
                        "margin": 37.5,
                        "transform": Array [
                          Object {
                            "translateY": 0,
                          },
                        ],
                      }
                    }
                    supportedOrientations={
                      Array [
                        "portrait",
                        "landscape",
                      ]
                    }
                    swipeThreshold={100}
                  >
                    <RNCSafeAreaView>
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "padding": 16,
                            },
                            Object {
                              "borderRadius": 8,
                            },
                            Object {
                              "elevation": 12,
                              "shadowColor": "rgba(156, 164, 169, 0.4)",
                              "shadowOffset": Object {
                                "height": 2,
                                "width": 0,
                              },
                              "shadowOpacity": 1,
                              "shadowRadius": 12,
                            },
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "maxHeight": "100%",
                                "padding": 24,
                              },
                              undefined,
                            ],
                          ]
                        }
                      >
                        <RCTScrollView
                          contentContainerStyle={
                            Object {
                              "alignItems": "center",
                            }
                          }
                        >
                          <View>
                            <Text
                              style={
                                Object {
                                  "color": "#2E3338",
                                  "fontFamily": "Jost-Medium",
                                  "fontSize": 22,
                                  "lineHeight": 28,
                                  "marginBottom": 12,
                                  "textAlign": "center",
                                }
                              }
                            >
                              securityFee
                            </Text>
                            <Text
                              style={
                                Object {
                                  "color": "#2E3338",
                                  "fontFamily": "Inter-Regular",
                                  "fontSize": 16,
                                  "lineHeight": 22,
                                  "marginBottom": 24,
                                  "textAlign": "center",
                                }
                              }
                            >
                              feeEducation
                            </Text>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "flexWrap": "wrap",
                              "justifyContent": "space-around",
                              "maxWidth": "100%",
                            }
                          }
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            nativeBackgroundAndroid={
                              Object {
                                "attribute": "selectableItemBackgroundBorderless",
                                "type": "ThemeAttrAndroid",
                              }
                            }
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#1AB775",
                                    "fontFamily": "Inter-SemiBold",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "paddingTop": 16,
                                  },
                                ]
                              }
                            >
                              global:dismiss
                            </Text>
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </Modal>
              </View>
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 0.7,
                      },
                    ],
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="#42D689"
                  hidesWhenStopped={true}
                  size="small"
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "borderStyle": "solid",
                  "borderTopColor": "#EEEEEE",
                  "borderTopWidth": 1,
                  "marginBottom": 15,
                  "marginTop": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  totalRefunded
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  13.30
                </Text>
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  Object {
                    "marginVertical": 0,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#81868B",
                      },
                    ]
                  }
                >
                  Celo Dollars (@
                   
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        undefined,
                        Object {
                          "color": undefined,
                        },
                      ]
                    }
                  >
                    
                    $
                    0.75
                  </Text>
                  )
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  10.00
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "marginHorizontal": 16,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "column",
            },
            Object {
              "marginBottom": 16,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={false}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#97DFC1",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "opacity": undefined,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              }
            }
            testID="ConfirmButton"
          >
            <Text
              accessibilityLabel="global:confirm"
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              global:confirm
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "column",
            },
            Object {
              "marginBottom": 10,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#F1F0EB",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "opacity": undefined,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              }
            }
          >
            <Text
              accessibilityLabel="cancel"
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
          },
          Object {
            "height": 0,
          },
          undefined,
        ]
      }
    />
  </View>
</RNCSafeAreaView>
`;

exports[`ReclaimPaymentConfirmationScreen renders correctly when fee calculation fails 2`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "paddingVertical": 10,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Jost-Book",
                  "fontSize": 26,
                  "lineHeight": 32,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#2E3338",
                  "padding": 10,
                  "paddingBottom": 10,
                },
              ]
            }
          >
            reclaimPayment
          </Text>
        </View>
        <View
          style={
            Object {
              "marginHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 16,
                        },
                        Object {
                          "fontSize": 20,
                        },
                      ]
                    }
                  >
                    M
                  </Text>
                </View>
              </View>
              <Text
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-SemiBold",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                    Object {
                      "marginHorizontal": 20,
                      "paddingTop": 6,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                mobileNumber
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "marginRight": 4,
                      },
                    ]
                  }
                >
                  🇺🇸
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "color": "#9CA4A9",
                      },
                    ]
                  }
                >
                  +1 (415) 555-0000
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "center",
                    "flexDirection": "row",
                    "marginTop": 5,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 34,
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 24,
                    },
                  ]
                }
              >
                $
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": "Hind-Regular",
                      "paddingHorizontal": 3,
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 48,
                      "lineHeight": 64,
                    },
                  ]
                }
              >
                13.30
              </Text>
            </View>
            <View
              style={
                Object {
                  "borderStyle": "solid",
                  "borderTopColor": "#EEEEEE",
                  "borderTopWidth": 1,
                  "marginBottom": 15,
                  "marginTop": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  global:amount
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  13.30
                </Text>
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      undefined,
                    ]
                  }
                >
                  securityFee
                </Text>
                <View
                  accessible={true}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 10,
                      "left": 10,
                      "right": 10,
                      "top": 10,
                    }
                  }
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackgroundBorderless",
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "justifyContent": "flex-end",
                      "paddingHorizontal": 5,
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../packages/mobile/src/images/info.png",
                      }
                    }
                    style={
                      Object {
                        "height": 12,
                        "tintColor": "#BDBDBD",
                        "width": 12,
                      }
                    }
                  />
                </View>
                <Modal
                  animationType="none"
                  hardwareAccelerated={false}
                  hideModalContentWhileAnimating={false}
                  onModalHide={[Function]}
                  onModalWillHide={[Function]}
                  onModalWillShow={[Function]}
                  onRequestClose={[Function]}
                  scrollHorizontal={false}
                  scrollOffset={0}
                  scrollOffsetMax={0}
                  scrollTo={null}
                  statusBarTranslucent={true}
                  supportedOrientations={
                    Array [
                      "portrait",
                      "landscape",
                    ]
                  }
                  swipeThreshold={100}
                  transparent={true}
                  visible={false}
                >
                  <View
                    accessible={true}
                    focusable={true}
                    forwardedRef={[Function]}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "backgroundColor": "black",
                        "bottom": 0,
                        "height": 1334,
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "width": 750,
                      }
                    }
                  />
                  <View
                    forwardedRef={[Function]}
                    hideModalContentWhileAnimating={false}
                    onModalHide={[Function]}
                    onModalWillHide={[Function]}
                    onModalWillShow={[Function]}
                    pointerEvents="box-none"
                    scrollHorizontal={false}
                    scrollOffset={0}
                    scrollOffsetMax={0}
                    scrollTo={null}
                    statusBarTranslucent={true}
                    style={
                      Object {
                        "flex": 1,
                        "justifyContent": "center",
                        "margin": 37.5,
                        "transform": Array [
                          Object {
                            "translateY": 0,
                          },
                        ],
                      }
                    }
                    supportedOrientations={
                      Array [
                        "portrait",
                        "landscape",
                      ]
                    }
                    swipeThreshold={100}
                  >
                    <RNCSafeAreaView>
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "padding": 16,
                            },
                            Object {
                              "borderRadius": 8,
                            },
                            Object {
                              "elevation": 12,
                              "shadowColor": "rgba(156, 164, 169, 0.4)",
                              "shadowOffset": Object {
                                "height": 2,
                                "width": 0,
                              },
                              "shadowOpacity": 1,
                              "shadowRadius": 12,
                            },
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "maxHeight": "100%",
                                "padding": 24,
                              },
                              undefined,
                            ],
                          ]
                        }
                      >
                        <RCTScrollView
                          contentContainerStyle={
                            Object {
                              "alignItems": "center",
                            }
                          }
                        >
                          <View>
                            <Text
                              style={
                                Object {
                                  "color": "#2E3338",
                                  "fontFamily": "Jost-Medium",
                                  "fontSize": 22,
                                  "lineHeight": 28,
                                  "marginBottom": 12,
                                  "textAlign": "center",
                                }
                              }
                            >
                              securityFee
                            </Text>
                            <Text
                              style={
                                Object {
                                  "color": "#2E3338",
                                  "fontFamily": "Inter-Regular",
                                  "fontSize": 16,
                                  "lineHeight": 22,
                                  "marginBottom": 24,
                                  "textAlign": "center",
                                }
                              }
                            >
                              feeEducation
                            </Text>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "flexWrap": "wrap",
                              "justifyContent": "space-around",
                              "maxWidth": "100%",
                            }
                          }
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            nativeBackgroundAndroid={
                              Object {
                                "attribute": "selectableItemBackgroundBorderless",
                                "type": "ThemeAttrAndroid",
                              }
                            }
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#1AB775",
                                    "fontFamily": "Inter-SemiBold",
                                    "fontSize": 16,
                                    "lineHeight": 22,
                                  },
                                  Object {
                                    "paddingTop": 16,
                                  },
                                ]
                              }
                            >
                              global:dismiss
                            </Text>
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </Modal>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                ---
              </Text>
            </View>
            <View
              style={
                Object {
                  "borderStyle": "solid",
                  "borderTopColor": "#EEEEEE",
                  "borderTopWidth": 1,
                  "marginBottom": 15,
                  "marginTop": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  totalRefunded
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  13.30
                </Text>
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  Object {
                    "marginVertical": 0,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Hind-Regular",
                        "fontSize": 15,
                        "lineHeight": 24,
                      },
                      Object {
                        "color": "#81868B",
                      },
                    ]
                  }
                >
                  Celo Dollars (@
                   
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        undefined,
                        Object {
                          "color": undefined,
                        },
                      ]
                    }
                  >
                    
                    $
                    0.75
                  </Text>
                  )
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 15,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "#81868B",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  10.00
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "marginHorizontal": 16,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "column",
            },
            Object {
              "marginBottom": 16,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={false}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#97DFC1",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "opacity": undefined,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              }
            }
            testID="ConfirmButton"
          >
            <Text
              accessibilityLabel="global:confirm"
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              global:confirm
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "column",
            },
            Object {
              "marginBottom": 10,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 100,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#F1F0EB",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "opacity": undefined,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
              }
            }
          >
            <Text
              accessibilityLabel="cancel"
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
          },
          Object {
            "height": 0,
          },
          undefined,
        ]
      }
    />
  </View>
</RNCSafeAreaView>
`;
